Update Docs to match the current tool behavior

--- a/Source/EtwKql/EtwKql.csproj
+++ b/Source/EtwKql/EtwKql.csproj
@@ -65,7 +65,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WinLogKql\WinLogKql.csproj" />
+    <ProjectReference Include="..\Rx.Kql\Rx.Kql.csproj" />
   </ItemGroup>
 
 </Project>
