Add Syslog Parser library and add SyslogParsing in RealtimeKql, fix headers and remove EtwKql and WinlogKql

--- a/Source/RealTimeKql/RealTimeKql.csproj
+++ b/Source/RealTimeKql/RealTimeKql.csproj
@@ -1,15 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-	<TargetFrameworks>net462</TargetFrameworks>
-	<RuntimeFrameworkVersion>2.2.0</RuntimeFrameworkVersion>
-	<RuntimeIdentifiers>win7-x64;win7-x86;win10-x64;win10-x86</RuntimeIdentifiers>
+	<TargetFrameworks>net462;netcoreapp3.1</TargetFrameworks>
+	<RuntimeFrameworkVersion>3.0.0</RuntimeFrameworkVersion>
+	<RuntimeIdentifiers>ubuntu.16.04-x64;win7-x64;win7-x86;win10-x64;win10-x86</RuntimeIdentifiers>
 	<Platforms>AnyCPU;x64</Platforms>
 	<HighEntropyVA>true</HighEntropyVA>
+	<LangVersion>8.0</LangVersion>
   </PropertyGroup>
-  
-  <!-- .NET 4.5 references, compilation flags and build options -->
+
+	<!--NET 462 references, compilation flags and build options -->
   <ItemGroup Condition="'$(TargetFramework)' == 'net462' ">
     <Reference Include="mscorlib" />
     <Reference Include="System" />
@@ -17,10 +18,17 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1' ">
+    <PackageReference Include="Microsoft.Azure.Kusto.Ingest.NETStandard" Version="6.2.2" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net462' ">
+	  <PackageReference Include="Microsoft.Azure.Kusto.Ingest" Version="8.1.5" />
+  </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Kusto.Ingest" Version="6.1.7" />
     <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	<PackageReference Include="Tx.Windows" Version="3.0.6" />
     <PackageReference Include="Tx.Windows.Logs" Version="3.0.3" />
   </ItemGroup>
@@ -45,6 +53,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EvtxEventXmlScrubber\EvtxEventXmlScrubber.csproj" />
+    <ProjectReference Include="..\Microsoft.Syslog\Microsoft.Syslog.csproj" />
     <ProjectReference Include="..\Rx.Kql\Rx.Kql.csproj" />
   </ItemGroup>
 
