--- a/Source/RealTimeKql/RealTimeKql.csproj
+++ b/Source/RealTimeKql/RealTimeKql.csproj
@@ -4,10 +4,12 @@
     <OutputType>Exe</OutputType>
 	<TargetFrameworks>net462;netcoreapp3.1</TargetFrameworks>
 	<RuntimeFrameworkVersion>3.0.0</RuntimeFrameworkVersion>
-	<RuntimeIdentifiers>ubuntu.16.04-x64;win7-x64;win7-x86;win10-x64;win10-x86</RuntimeIdentifiers>
+	<RuntimeIdentifiers>linux-x64;win-x64</RuntimeIdentifiers>
 	<Platforms>AnyCPU;x64</Platforms>
 	<HighEntropyVA>true</HighEntropyVA>
 	<LangVersion>8.0</LangVersion>
+	<DefineConstants Condition="'$(RuntimeIdentifier)' == 'win-x64'">$(DefineConstants);BUILT_FOR_WINDOWS</DefineConstants>
+	<DefineConstants Condition="'$(RuntimeIdentifier)' == 'linux-x64'">$(DefineConstants);BUILT_FOR_LINUX</DefineConstants>
   </PropertyGroup>
 
 	<!--NET 462 references, compilation flags and build options -->
@@ -29,11 +31,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-	<PackageReference Include="Tx.Windows" Version="3.0.6" />
-    <PackageReference Include="Tx.Windows.Logs" Version="3.0.3" />
+	<!-- The following two references are needed only when we are building for Windows. For linux exclude these Windows specific references -->  
+	<PackageReference Include="Tx.Windows" Version="3.0.6" Condition="'$(RuntimeIdentifier)'=='win-x64'" />
+    <PackageReference Include="Tx.Windows.Logs" Version="3.0.3" Condition="'$(RuntimeIdentifier)'=='win-x64'" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="filter.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="ProcessCreation.csl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -52,7 +58,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EvtxEventXmlScrubber\EvtxEventXmlScrubber.csproj" />
+	<!-- The following reference is needed only when we are building for Windows. For linux exclude these Windows specific references -->
+	<ProjectReference Include="..\EvtxEventXmlScrubber\EvtxEventXmlScrubber.csproj" Condition="'$(RuntimeIdentifier)'=='win-x64'" />
     <ProjectReference Include="..\Microsoft.Syslog\Microsoft.Syslog.csproj" />
     <ProjectReference Include="..\Rx.Kql\Rx.Kql.csproj" />
   </ItemGroup>
