--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -60,6 +60,7 @@ jobs:
       Test_Project_Path: Source\KqlTools.sln                    # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
       Wap_Project_Directory: your-wap-project-directory-name    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
       Wap_Project_Path: your-wap-project-path                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true                     # Temporary workaround for add-path and set-env deprecation
 
     steps:
     - name: Checkout
