--- a/Source/RealTimeKql/RealTimeKql.csproj
+++ b/Source/RealTimeKql/RealTimeKql.csproj
@@ -5,6 +5,7 @@
     <TargetFrameworks>netcoreapp3.1;net472</TargetFrameworks>
     <RuntimeIdentifiers>linux-x64;win-x64</RuntimeIdentifiers>
     <Platform>AnyCPU</Platform>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
