--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -22,6 +22,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    # Clean solution
+    - name: Clean solution
+      run: dotnet clean $env:Solution_Path
+
     # Build project
     - name: Build project
       run: dotnet build $env:Project_Path
