added nuget cache clear step to test-build workflow

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -24,7 +24,9 @@ jobs:
 
     # Clean solution
     - name: Clean solution
-      run: dotnet clean $env:Solution_Path
+      run: |
+        dotnet clean $env:Solution_Path
+        dotnet nuget locals all --clear
 
     # Build project
     - name: Build project
