separated methods for stopping output and exit

--- a/Source/RealTimeKql/RealTimeKql.csproj
+++ b/Source/RealTimeKql/RealTimeKql.csproj
@@ -13,6 +13,21 @@
   </ItemGroup>
 
   <ItemGroup>    
+    <None Update="TestAssets\SampleCsv.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>    
+    <None Update="TestAssets\SampleEtl.etl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>    
+    <None Update="TestAssets\SampleEvtx.evtx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>    
+    <None Update="TestAssets\SampleSyslog.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>    
+    <None Update="TestAssets\test.kql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>    
     <None Update="KqlPowerShell.psd1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>    
