--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-# Workflow to build, sign, compress, and upload binaries to a release
+# Workflow to deploy a new release when a new tag is pushed
 name: Build and Release
 
 on:
@@ -27,32 +27,56 @@ jobs:
         echo "TAG_NAME=$tag" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "RELEASE_NAME=$release" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
-    # Publish binaries for each target runtime
+    # Run dotnet publish for all necessary binaries
     - name: Publish Binaries
       run: |
         dotnet clean Source/KqlTools.sln
         dotnet nuget locals all --clear
         dotnet publish Source/RealTimeKql/RealTimeKql.csproj -r win-x64 -f netcoreapp3.1 -c Release -p:PublishSingleFile=true -o ${{ runner.temp }}\win-x64
         dotnet publish Source/RealTimeKql/RealTimeKql.csproj -r linux-x64 -f netcoreapp3.1 -c Release -p:PublishSingleFile=true -o ${{ runner.temp }}\linux-x64
+        dotnet publish Source/RealTimeKqlLibrary/RealTimeKqlLibrary.csproj -r win-x64 -f net472 -c Release -o ${{ runner.temp }}\python\realtimekql\lib
     
-    # Compress binaries for each target runtime
-    - name: Compress Binaries
-      run: |
-        mkdir ${{ github.workspace }}\ReleaseAssets
-        copy Doc/Queries/Windows/* ${{ runner.temp }}\win-x64
-        Compress-Archive -Path ${{ runner.temp }}\win-x64\* -DestinationPath "${{ github.workspace }}\ReleaseAssets\RealTimeKql.${{ env.TAG_NAME }}.zip"
-        copy Doc/Queries/Linux/* ${{ runner.temp }}\linux-x64
-        cd ReleaseAssets
-        tar -czvf "RealTimeKql.${{ env.TAG_NAME }}.tar.gz" ${{ runner.temp }}\linux-x64\*
-        dir "RealTimeKql.${{ env.TAG_NAME }}.*"
-
-    # Sign binaries
+    # Sign Windows executable with signtool
     - name: Sign Binaries
       uses: ./Source/Actions/SignAction
       with:
         certificate: '${{ secrets.BASE64_ENCODED_PFX }}'
         key: '${{ secrets.PFX_KEY }}'
-        directory: '${{ github.workspace }}\ReleaseAssets'
+        directory: '${{ runner.temp }}\win-x64'
+
+    # Copy realtimekql.py to tmp directory
+    - name: Copy realtimekql.py Step
+      run: |
+        copy Source/RealTimeKql/realtimekql.py ${{ runner.temp }}\python\realtimekql
+
+    # Set up tmp directory for python deployment
+    - name: Python Setup Step
+      uses: ./Source/Actions/SetupPythonDeploymentAction
+      with:
+        tag: ${{ env.TAG_NAME }}
+        directory: '${{ runner.temp }}\python\realtimekql'
+
+    # Build python wheel
+    - name: Build Python Wheel Step
+      run: |
+        cd ${{ runner.temp }}\python\realtimekql
+        python -m pip install -U pip wheel setuptools
+        python setup.py bdist_wheel
+
+    # Compress release packages for win-x64
+    - name: Compress Binaries Windows
+      run: |
+        mkdir ${{ github.workspace }}\ReleaseAssets
+        copy Doc/Queries/Windows/* ${{ runner.temp }}\win-x64
+        copy ${{ runner.temp }}\python\realtimekql\dist\* ${{ runner.temp }}\win-x64
+        Compress-Archive -Path ${{ runner.temp }}\win-x64\* -DestinationPath "${{ github.workspace }}\ReleaseAssets\RealTimeKql.${{ env.TAG_NAME }}.zip"
+        
+    # Compress release packages for linux-x64
+    - name: Compress Binaries Linux
+      run: |
+        copy Doc/Queries/Linux/* ${{ runner.temp }}\linux-x64
+        cd ReleaseAssets
+        tar -czvf "RealTimeKql.${{ env.TAG_NAME }}.tar.gz" ${{ runner.temp }}\linux-x64\*
 
     # Upload compressed binaries to latest release
     - name: Create Release Step
