added python deployment to workflow

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -83,3 +83,57 @@ jobs:
         tag_name: ${{ needs.setup.outputs.tag_name }}
         release_name: ${{ needs.setup.outputs.release_name }}
         directory: '${{ github.workspace }}\ReleaseAssets'
+
+  pythonmodule:
+    needs: setup
+
+    runs-on: windows-latest
+
+    defaults:
+      run:
+        shell: powershell
+
+    env:
+      Identity_Mapper: "namita-prakash:${{ secrets.NAPRAKAS_PYPI_KEY }};" # Add mapping from github username to pypi api key secret
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    # Get PyPi API key for current user
+    - name: Set API key
+      run: |
+        $ids = $env:Identity_Mapper -split ";"
+        $mapper = New-Object System.Collections.Generic.Dictionary"[String,String]"
+        foreach ($id in $ids) { $pair = $id -split ":"; $mapper.Add($pair[0],$pair[1]) }
+        $key = $mapper["${{ github.actor }}"]
+        echo "PYPI_API_KEY=$key" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
+    # Run dotnet publish for all necessary binaries
+    - name: Generate published dependencies
+      run: |
+        dotnet clean Source/KqlTools.sln
+        dotnet nuget locals all --clear
+        dotnet publish Source/RealTimeKqlLibrary/RealTimeKqlLibrary.csproj -r win-x64 -f net472 -c Release -o ${{ runner.temp }}\python\realtimekql\lib
+
+    # Set up python build directory
+    - name: Set up python build directory step
+      run: |
+        copy Source/KqlPython/* ${{ runner.temp }}\python\realtimekql
+        copy README.md ${{ runner.temp }}\python\realtimekql
+        cd ${{ runner.temp }}\python\realtimekql
+        "${{ needs.setup.outputs.tag_name }}" | Out-File -FilePath VERSION.txt -Encoding ASCII -NoNewline
+
+    # Build python wheel
+    - name: Build Python Wheel Step
+      run: |
+        cd ${{ runner.temp }}\python\realtimekql 
+        python -m pip install -U pip wheel setuptools build
+        python -m build
+
+    # Deploy python module
+    - name: Deploy Python Module
+      run: |
+        cd ${{ runner.temp }}\python\realtimekql\
+        python -m pip install --user --upgrade twine
+        python -m twine upload --repository testpypi dist\* -u __token__ -p $env:PYPI_API_KEY
