--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -1,5 +1,5 @@
 # Workflow to deploy a new command line tool release when a new tag is pushed
-name: Deploy Command Line Tool and Python Module
+name: Build and Release
 
 on:
   push:
@@ -52,14 +52,6 @@ jobs:
         dotnet nuget locals all --clear
         dotnet publish Source/RealTimeKql/RealTimeKql.csproj -r win-x64 -f netcoreapp3.1 -c Release -p:PublishSingleFile=true -o ${{ runner.temp }}\win-x64
         dotnet publish Source/RealTimeKql/RealTimeKql.csproj -r linux-x64 -f netcoreapp3.1 -c Release -p:PublishSingleFile=true -o ${{ runner.temp }}\linux-x64
-    
-    # Sign Windows executable with signtool
-    - name: Sign Binaries
-      uses: ./Source/Actions/SignAction
-      with:
-        certificate: '${{ secrets.BASE64_ENCODED_PFX }}'
-        key: '${{ secrets.PFX_KEY }}'
-        directory: '${{ runner.temp }}\win-x64'
 
     # Compress release packages for win-x64
     - name: Compress Binaries Windows
