refactored cmdline parser to prep for adding config file parser

--- a/Source/RealTimeKql/RealTimeKql.conf
+++ b/Source/RealTimeKql/RealTimeKql.conf
@@ -30,7 +30,7 @@
 	#adxdatabase = value
 	#adxtable = value
 	#adxcreatereset = false
-	#adxdircetingest = true
+	#adxdirectingest = true
 
 # Query
 	query = queries.kql
